--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
+</head>
+<body>
+  <app-root></app-root>
+</body>
+</html>
+
 </head>
 <body>
   <app-root></app-root>
